# task_researcher

./: .env.example  .gitignore  README.md  pyproject.toml
main/: ai_services.py  cli.py  commands.py  config.py  dependency_manager.py  models.py  task_manager.py  ui.py  utils.py
main/mcp/: server.py
mcp/: server.py
scripts/: background.md  functional_spec.md  plan.md  technical_spec.md
